--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,44 @@
 # Core Python Libraries
-numpy==1.21.6
-pandas==1.3.5
-matplotlib==3.5.1
-scikit-learn==1.0.2
+numpy>=1.24,<2.0
+pandas>=1.5.3,<3.0
+matplotlib>=3.7,<4.0
+scikit-learn>=1.1.3,<2.0
 
 # Financial Data Acquisition
-yfinance==0.1.70
-requests==2.26.0
-beautifulsoup4==4.10.0
+yfinance>=0.2.0
+requests>=2.31
+beautifulsoup4>=4.12
 
 # Machine Learning and Deep Learning
-tensorflow==2.8.0
-keras==2.8.0
-statsmodels==0.13.2
+tensorflow>=2.13,<3.0
+keras>=2.13,<3.0
+statsmodels>=0.14
 
 # Time Series Analysis
-pmdarima==1.8.5
+pmdarima>=1.8.5,<3.0
 
 # BigQuery Integration
-google-cloud-bigquery==3.3.2
+google-cloud-bigquery>=3.11
 
 # Scheduling
-schedule==1.1.0
-
-# Data Preprocessing
-scikit-learn==1.0.2
+schedule>=1.2
 
 # Visualization
-plotly==5.6.0
+plotly>=5.15
 
 # Configuration Management
-pyyaml==6.0
+pyyaml>=6.0
 
 # Optional: For additional data processing
-scipy==1.7.3
+scipy>=1.11
 
 # Optional: For web scraping (if needed)
-selenium==4.1.3
-webdriver-manager==3.5.2
+selenium>=4.10
+webdriver-manager>=4.0
 
 # Optional: For API interactions
-python-dotenv==0.19.2
+python-dotenv>=1.0
 
 # Optional: For advanced reporting
-openpyxl==3.0.9
-xlrd==2.0.1
+openpyxl>=3.1
+xlrd>=2.0
